recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var x:Int
    ^Tree:6: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var y:Int
    ^